--- a/source/css/timer.css
+++ b/source/css/timer.css
@@ -9,6 +9,24 @@
     margin: auto;
 }
 
+.base-timer__label {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: var(--size);
+    font-family: 'Inconsolata', monospace;
+}
+.timer-label {
+    font-family: 'Inconsolata', monospace;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .base-timer__svg {
     transform: scaleX(-1);
 }
@@ -33,26 +51,33 @@
     stroke: currentColor;
 }
 
-.base-timer__path-remaining.green {
+.green {
     color: rgb(65, 184, 131);
 }
 
-.base-timer__path-remaining.orange {
+.orange {
     color: orange;
 }
 
-.base-timer__path-remaining.red {
+.red {
     color: red;
 }
 
-.base-timer__label {
-    position: absolute;
-    width: 100%;
+.meter {
+    box-sizing: content-box;
+    height: 10px;
+    /* Can be anything */
+    position: relative;
+    margin: auto;
+    /* Just for demo spacing */
+    background: var(--dark-white);
+    border-radius: 25px;
+    padding: 2.5px;
+}
+.meter>span {
+    display: block;
     height: 100%;
-    top: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: var(--size);
-    font-family: 'Inconsolata', monospace;
+    border-radius: 20px;
+    position: relative;
+    overflow: hidden;
 }
