--- a/source/css/main.css
+++ b/source/css/main.css
@@ -57,9 +57,15 @@ hr {
     display: none;
 }
 
-.img-full {
+.img-fit-width {
     width: 100%;
     height: auto;
+    object-fit: cover;
+}
+.img-fit-height {
+    width: auto;
+    height: 100%;
+    object-fit: cover;
 }
 .svg-1 {
     background-size: 64px;
@@ -119,6 +125,7 @@ hr {
     font-size: 1.5rem;
     padding: .5rem 1rem;
     margin-top: 0;
+    margin-bottom: 0;
 }
 .section-container {
     background-color: var(--primary-shadow);
@@ -147,6 +154,33 @@ hr {
 }
 .section-item p {
     color: var(--dark-gray);
+}
+.pagination {
+    display: grid;
+    justify-content: center;
+    gap: 0.5rem;
+    /* flex-direction: row; */
+    grid-auto-flow: column;
+    grid-auto-columns: fit-content;
+    margin: auto;
+}
+.pagination a {
+    padding: 0 .5em;
+    background-color: var(--primary);
+    text-decoration: none;
+    color: var(--white);
+    text-align: center;
+}
+.pagination a.active {
+    background-color: var(--white);
+    outline: 2px solid var(--primary-dark);
+    color: var(--black);
+    border-radius: .5rem;
+}
+.pagination a:hover:not(.active) {
+    background-color: var(--primary-dark);
+    /* color: var(--black); */
+    border-radius: .5rem;
 }
 .card {
     width: 100%;
@@ -190,11 +224,11 @@ hr {
     position: absolute;
     bottom: 0;
 }
-.card-subtext :not(.btn) {
-    justify-self: left;
+.card-subtext :last-child {
+    margin-left: auto;
 }
-.card-subtext .btn {
-    justify-self: right;
+.card-subtext :not(:last-child) {
+    margin-right: auto;
 }
 .txt-wrapped {
     -moz-box-orient: vertical;
@@ -560,6 +594,12 @@ hr {
 
 @media screen and (max-width: 800px) {
     .banner {
+        flex-direction: column;
+    }
+    .hero-section {
+        height: auto;
+    }
+    .flex-container {
         flex-direction: column;
     }
 }
